src/tess/tl/test/fail/test_fail_ufcs_implicit_module_not_found.tl
#module main
#import <Array.tl>

main() {
    arr := Array.empty[Int]()
    arr.nonexistent_function()          // no such function in Array module
    0
}
